--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,7 +1,7 @@
 <ng-container 
 *ngIf="router.url === '/'  || 
 router.url === '/history'  || 
-router.url === '/strato-partner-node-license'  || 
+router.url === '/strato-partner-nodes-license'  || 
 router.url === '/strato-partner-nodes' ; then mainFooter ; else blankFooter"
 >
 </ng-container>
@@ -14,7 +14,7 @@ router.url === '/strato-partner-nodes' ; then mainFooter ; else blankFooter"
           </svg>
         </div>
         <div class="container">
-          <div class="row">
+          <div class="row justify-content-center">
             <div class="col-lg-10">
               <div class="footer-logo">
                 <img src="assets/images/new-images/footer-logo.png" alt="">
