--- a/src/app/components/client/info/info-details/info-step5/info-step5.component.html
+++ b/src/app/components/client/info/info-details/info-step5/info-step5.component.html
@@ -1,9 +1,10 @@
+
 <div class="login-info-step">
     <div class="login-info-step-wraper">
         <app-side-panel></app-side-panel>
         <div class="login-info-content">
             <img id="logoImg" src="assets/images/logo-blue.png" alt="">
-            <div class="custom_button"><a routerLink="" >Next page</a></div>
+            <div class="custom_button"><a routerLink="/info-step3" >Next page</a></div>
             <div class="main-container">
                 <section class="history">
                     <div class="history-top-wraper">        
@@ -99,9 +100,9 @@
                 <label>Gas Fee</label>
               </div>
               <div class="slider-range">
-                <input type="range" class="form-range" min="0" max="0.01" step="0.0011" id="customRange3"
-                  onchange="updateTextInput(this.value)">
-                <label for="customRange3" class="form-label"><span id="rangeValEth">0.0044</span> ETH (US $<span
+                <input type="range" class="form-range" (input)="ranger.value" #ranger min="0" max="0.01" step="0.0011" id="customRange3"
+                  (click)="updateTextInput1()">
+                <label for="customRange3" class="form-label"><span id="rangeValEth">{{ranger.value}}</span> ETH (US $<span
                     id="rangeValueUsd">23.42</span>)</label>
                 <span class="range-text-left">Slower</span>
                 <span class="range-text-right">Very Fast</span>
