--- a/src/app/components/client/info/info-details/info-step5/info-step5.component.scss
+++ b/src/app/components/client/info/info-details/info-step5/info-step5.component.scss
@@ -1,11 +1,3 @@
-
-
-
-
-
-
-
-
 .login-info-step{
     height: 100%;
     .login-info-step-wraper{
@@ -112,17 +104,20 @@
     }
     .formShow{
         display: flex !important;
+        // top: 0 !important;
     }    
     .modal-wraper{
         position: absolute;
-        top: 0;
+        // top: -100%;
         width: 100%;
         height: 100%;
         display: none;
+        // display: flex;
         align-items: center;
         justify-content: center;
         z-index: 1050;
         background: rgba(0,0,0, 0.4);
+        transition: all .3s ease-in-out;
         .modal-content{
             width: 50%;
             position: relative;                        
@@ -367,16 +362,9 @@
                         .history-table{
                             .history-list-wrap{
                                 .history-list{
-                                    .history-item-about{
-                                           
-                                        .history-time{
-                                            font-size: 14px;
-                                        }
-                                    }
                                     .history-item{
                                         flex-direction: column;
                                         text-align: center;
-                                        
                                     }
                                 }
                             }
