--- a/src/app/components/client/info/info-details/info.component.html
+++ b/src/app/components/client/info/info-details/info.component.html
@@ -2,7 +2,7 @@
     <img src="assets/images/background1.png" alt="" class="backgroungImg1">
     <img src="assets/images/background2.png" alt="" class="backgroundImg2">
     <div class="login-wraper-content">
-        <h1>Welcome Back <span *ngIf="logedinUser">{{logedinUser | titlecase}}</span></h1>
+        <h1>Welcome Back <span *ngIf="logedinUser">{{logedinUser | titlecase}} !</span></h1>
         <button mat-raised-button color="custom-background-button" routerLink="/info-step1">GET STARTED</button>
     </div>
 </div>
