--- a/src/app/components/client/info/info-details/info.component.scss
+++ b/src/app/components/client/info/info-details/info.component.scss
@@ -25,6 +25,7 @@
             font-family: 'Montserrat', sans-serif;
             font-size: 35px;
             font-weight: 700;
+            margin-bottom: 20px;
         }
         .mat-raised-button{
             font-size: 13px;
